; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_load_oid_stat.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_load_oid_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.oid_stat = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.oid_stat*, i8*, i8*)* @load_oid_stat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_oid_stat(%struct.oid_stat* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.oid_stat*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.oid_stat* %0, %struct.oid_stat** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.oid_stat*, %struct.oid_stat** %4, align 8
  %8 = getelementptr inbounds %struct.oid_stat, %struct.oid_stat* %7, i32 0, i32 2
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @stat_data_from_disk(i32* %8, i8* %9)
  %11 = load %struct.oid_stat*, %struct.oid_stat** %4, align 8
  %12 = getelementptr inbounds %struct.oid_stat, %struct.oid_stat* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @hashcpy(i32 %14, i8* %15)
  %17 = load %struct.oid_stat*, %struct.oid_stat** %4, align 8
  %18 = getelementptr inbounds %struct.oid_stat, %struct.oid_stat* %17, i32 0, i32 0
  store i32 1, i32* %18, align 4
  ret void
}

declare dso_local i32 @stat_data_from_disk(i32*, i8*) #1

declare dso_local i32 @hashcpy(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
